--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -9,16 +9,66 @@
       src="https://unpkg.com/htmx.org/dist/ext/loading-states.js"
       defer
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
+    <script src="public/index.js" defer></script>
   </head>
   <body hx-ext="loading-states">
-    <p id="loading" class="hidden text-blue-700">loading...</p>
-    <form
-      hx-post="/add-todo"
-      data-loading-target="#loading"
-      data-loading-class-remove="hidden"
-    >
-      <input type="text" name="todo" />
-      <button type="submit">Add</button>
-    </form>
+    <div id="alerts" class="fixed right-0 mt-2 flex w-1/3 flex-col gap-1"></div>
+    <div class="mx-auto max-w-3xl pt-8">
+      <h1 class="pb-4 text-center text-xl font-medium">Todo List</h1>
+      <div data-loading-states>
+        <form
+          class="flex flex-col"
+          hx-post="/todo/add"
+          hx-target="#todos"
+          hx-swap="afterbegin"
+          hx-on::after-on-load="
+          if (event.detail.successful) {
+            this.reset();
+            Toast.fire({ icon: 'success', title: 'Todo created!' });
+          }
+        "
+          hx-on::response-error="Toast.fire({ icon: 'error', title: 'Todo creation failed!' })"
+        >
+          <input
+            class="rounded-md border border-zinc-600 p-2"
+            type="text"
+            name="taskName"
+            placeholder="Add new todo"
+            data-loading-disable
+          />
+          <button
+            class="m-auto mt-4 rounded-md border border-zinc-600 bg-blue-500 px-4 text-white"
+            type="submit"
+          >
+            Add
+          </button>
+        </form>
+      </div>
+
+      <ul
+        id="todos"
+        class="flex flex-col gap-2 pt-4"
+        hx-on::after-swap="
+          if (event.detail.requestConfig.path.includes('update')) {
+            const liElements = Array.from(this.children);
+            const updatedAtAttribute = 'data-updated-at';
+            const checkedAttribute = 'data-checked';
+            const uncheckedElements = liElements.filter(el => el.getAttribute(checkedAttribute) === 'false');
+            const checkedElements = liElements.filter(el => el.getAttribute(checkedAttribute) === 'true');
+            const sortByDate = (first, second) => {
+              return new Date(second.getAttribute(updatedAtAttribute)) - new Date(first.getAttribute(updatedAtAttribute));
+            }
+
+            this.replaceChildren(
+              ...uncheckedElements.sort(sortByDate),
+              ...checkedElements.sort(sortByDate),
+            )
+          }
+        "
+      >
+        {{range .}} {{template "todo.html" .}} {{end}}
+      </ul>
+    </div>
   </body>
 </html>
